Added more info to the README file

--- a/README
+++ b/README
@@ -1,6 +1,11 @@
-The code is here, but GitLab is fucking dumb and does not show the file list
-on the main page:
+This is the Google App Engine app that runs on https://wpsnitch.appspot.com/
 
-https://gitlab.com/subversion/wpsnitch/tree/master
+If you want to create your own app or service to retrieve this information,
+read the code and replicate its behaviour--please, don't use the appspot
+website as an API! It's on the free tier of App Engine and its quota is very
+limited.
+
+The code is here, but GitLab is fucking dumb and does not show the file list
+on the main page of the project. Click "Files", in the sidebar, to see it.
 
 Everything is in the public domain, do whatever you want with the code.
